opsiweb/uib-components/static/css/custom.css
/* ... */
.btn-light:hover {
  /* color: #212529;
  background-color: var(--light-dark) !important;
  border-color: var(--light-dark) !important; */
  color: var(--fg-btn_light-hover);
  background-color: var(--bg-btn_light-hover) !important;
  border-color: var(--b-btn_light-hover) !important;
}
.btn-dark {
  /* color: var(--btn-fg);
  background-color: var(--dark) !important;
  border-color: var(--dark) !important; */
  color: var(--fg-btn_dark);
  background-color: var(--bg-btn_dark) !important;
  border-color: var(--b-btn_dark) !important;
}
.btn-dark:hover {
  /* color: var(--btn-fg);
  background-color: var(--dark-dark) !important;
  border-color: var(--dark-dark) !important; */
  color: var(--fg-btn_dark-hover);
  background-color: var(--bg-btn_dark-hover) !important;
  border-color: var(--b-btn_dark-hover) !important;
}




/* .table.b-table > thead > tr > [aria-sort=none] {
  background-color: aqua;
  color: green !important;
} */

.log-row-1 { background-color: transparent; color: var(--log-essential); }
.log-row-2 { background-color: transparent; color: var(--log-critical); }
.log-row-3 { background-color: transparent; color: var(--log-error); }
.log-row-4 { background-color: transparent; color: var(--log-warning); }
.log-row-5 { background-color: transparent; color: var(--log-notice); }
.log-row-6 { background-color: transparent; color: var(--log-info); }
.log-row-7 { background-color: transparent; color: var(--log-debug); }
.log-row-8 { background-color: transparent; color: var(--log-trace); }
.log-row-9 { background-color: transparent; color: var(--log-secret); }


.bg-primary {
  background-color: var(--primary) !important;
}
.bg-secondary {
  background-color: var(--secondary) !important;
}
.bg-normal {
  color:var(--color) !important;
  background: var(--background) !important;
}
.text-primary {
  color: var(--txt-fg) !important;
  background: var(--primary) !important;
}
.text-secondary {
  color: var(--log-secondary, black) !important;
}
.text-success {
  color: var(--txt-fg) !important;
  background: var(--success) !important;
}
.text-danger {
  background: var(--danger) !important;
  color: var(--txt-fg) !important;
}
.text-info {
  color: var(--txt-fg) !important;
  background: var(--info) !important;
}
.text-light {
  color: var(--light) !important;
}
.text-dark {
  background: var(--dark) !important;
  color: var(--txt-fg) !important;
}
.text-white {
  color: var(--txt-fg) !important;
}
.text-muted {
  color: var(--primary-outline-foreground-disabled, gray) !important;
}
.bg-warning {
  color:#212121 !important;
  background: var(--warning) !important;
}
.nav-link.disabled {
  color: var(--primary-outline-foreground-disabled, gray) !important;
  cursor: not-allowed;
}
.loadingCursor {
  cursor: wait;
}
.helpCursor {
  cursor: help;
}
.container-fluid,
.container-lg,
.container-md,
.container-sm,
.container-xl {
  width: 100%;
  padding-right: 2px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}
.custom-control {
  height: var(--component-height) !important;
}
.vue-treeselect__x-container:hover {
  color: var(--general-fg);
}

.vue-treeselect__checkbox--checked,
.vue-treeselect__checkbox--indeterminate,
.vue-treeselect__label-container:hover .vue-treeselect__checkbox--checked,
.vue-treeselect__label-container:hover .vue-treeselect__checkbox--indeterminate{
  background-color: var(--primary);
  border-color: var(--primary);
}
.vue-treeselect__label-container:hover .vue-treeselect__checkbox--unchecked {
  border-color: var(--general-fg);
}
.treeselect_notstored .vue-treeselect__control {
  color: var(--fg-input_component) !important;
  background-color: var(--bg-input_component) !important;
  border:1px solid var(--b-input_component) !important;
}
.treeselect_notstored.vue-treeselect--focused .vue-treeselect__control {
  color: var(--fg-input_component-focus) !important;
  background-color: var(--bg-input_component-focus) !important;
  border:1px solid var(--b-input_component-focus) !important;
  box-shadow: var(--b-input_component-focus) !important;
}

.treeselect_with_wrapper .vue-treeselect__control {
  color: var(--fg-input_component) !important;
  background-color: var(--bg-input_component) !important;
  border: 0px;
}
.treeselect_with_wrapper.vue-treeselect--focused .vue-treeselect__control {
  color: var(--fg-input_component-focus) !important;
  background: var(--bg-input_component-focus) !important;
  border:0px;
  box-shadow: var(--b-input_component-focus) !important;
}

.treeselect .vue-treeselect__menu {
  background: var(--general-bg, var(--background, black));
  color: var(--color, var(--general-fg, white));
  border:1px solid var(--b-input_component) !important;
}
.treeselect .vue-treeselect__single-value {
  color: var(--color, var(--light, white));
}
.treeselect .vue-treeselect__multi-value-label {
  color: var(--color, var(--light, white));
  background: var(--general-bg, var(--background, black));
}
.treeselect .vue-treeselect__multi-value-item {
  background: var(--general-bg, var(--background, black));
  font-size: small;
}
.treeselect .vue-treeselect__value-remove {
  display: none;
}
.treeselect .vue-treeselect__input {
  color: var(--color) !important;
}
.treeselect .vue-treeselect__menu .vue-treeselect__option--highlight {
  color: var(--color);
  background-color: var(--highlight);
}
.treeselect.vue-treeselect--single .vue-treeselect__option--selected{
  color: var(--light);
  background-color: var(--primary);
}
.treeselect .vue-treeselect__placeholder {
  display: block;
  color:var(--placeholder);
}

.treeselect_fullpage .vue-treeselect__menu {
  min-height: 77vh;
}
.treeselect_quickpanel .vue-treeselect__menu {
  min-height: 35vh;
}
.treeselect_quickpanel .vue-treeselect__control-arrow-container {
  display: none;
}

.treeselect_short{
  max-width: var(--component-width) !important;
}

.contextmenu .btn{
  text-align: left;
  padding-left: 0;
  width: 100%;
}
.contextmenu .btn::after {
  float: right;
  margin-top: 10px;
}
/* ... */

